# frl-chrome-ext

./: .gitignore  Makefile  README.md  context.md  frl-steps.json  instructions.md  monster-context.md  package.json  pnpm-workspace.yaml
extension/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
extension/public/: manifest.json  popup.html
extension/scripts/: copy-assets.mjs
extension/src/: background.ts  content.ts  popup.ts  recorder.test.ts  recorder.ts  replayer.test.ts  replayer.ts  selector.test.ts  selector.ts  settings.test.ts  settings.ts  types.ts
modal_ocr/: README.md  pyproject.toml
modal_ocr/src/modal_ocr/: __init__.py
replayer/: README.md  pyproject.toml
replayer/src/replayer/: __init__.py  replay.py  selectors.py  vision_fallback.py  waiters.py
replayer/tests/: test_replay.py
scripts/: package.json
traces/: playwright-python-trace.json
