[project]
name = "replayer"
version = "0.0.0"
requires-python = ">=3.9"
description = "Playwright replayer (skeleton)"
readme = "README.md"
dependencies = [
  "playwright>=1.44.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
